sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s-basalt
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          resources:
            limits:
              memory: "4Gi"
              cpu: "2"
          ports:
            - containerPort: 8989
              protocol: TCP
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: sonarr-media
              mountPath: /home/media
            - name: sonarr-downloads
              mountPath: /home/downloads
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: sonarr-downloads
          nfs:
            server: 192.168.1.126
            path: /mnt/user/Downloads
        - name: sonarr-media
          nfs:
            server: 192.168.1.126
            path: /mnt/user/Media
