sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-dns"
spec:
  tls:
    - hosts:
        - sonarr.ozeliurs.com
      secretName: sonarr-tls
  rules:
    - host: sonarr.ozeliurs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
